feat:adiciona rotinas de logout, validação de token e Refresh token pt05
