# application/app/Http/Controllers/Auth/AuthController.php
@@ -3,9 +3,9 @@
 namespace App\Http\Controllers\Auth;
 
 use App\Http\Controllers\Controller;
-use App\Http\Requests\LoginRequestDto;
+use App\Http\Requests\LoginUser\LoginRequestDto;
+use App\Http\Requests\LoginUser\RefreshTokenRequestDto;
 use App\Services\AuthService;
-use Illuminate\Http\Request;
 
 class AuthController extends Controller
 {
@@ -80,6 +80,59 @@ class AuthController extends Controller
     public function logout()
     {
         return $this->authService->logout();
+    }
+
+    /**
+     * @OA\Post(
+     *   path="/v1/dewtech/validateToken",
+     *   operationId="validateToken",
+     *   tags={"Auth"},
+     *   summary="Validar token de acesso",
+     *   description="Validar token de acesso",
+     *   security={{"jwtAuth":{}}},
+     *
+     *  @OA\Response(
+     *   response=200,
+     *   description="Token válido",
+     *   @OA\JsonContent(ref="#/components/schemas/SuccessResponse")
+     *  )
+     * )
+     */
+    public function validateToken()
+    {
+        return $this->authService->validateToken();
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/v1/dewtech/refreshtoken",
+     *     operationId="refreshtoken",
+     *     tags={"Auth"},
+     *     summary="Atualizar token",
+     *     description="Renova um token de acesso",
+     *     security={{"jwtAuth":{}}},
+     *
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(property="token", type="string", description="Token"),
+     *                 example={"refresh_token": "abcd1234"}
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Update token com sucesso",
+     *         @OA\JsonContent(ref="#/components/schemas/SuccessResponse")
+     *         )
+     *     )
+     * )
+     */
+    public function refreshToken(RefreshTokenRequestDto $request)
+    {
+        return $this->authService->refreshAccessToken($request);
     }
 
 }
